<resources>
    <string name="app_name">MoviesApp</string>
    <string name="error_message">An error has occurred.</string>
    <string name="show_movies_default">Show movies here!</string>
    <string name="movie_title">Movie title</string>
    <string name="title">title</string>
    <string name="movie_overview">Overview</string>
    <string name="overview">overview</string>
    <string name="movie_vote_average">Vote Average</string>
    <string name="vote_average">vote average</string>
    <string name="movie_release_date">Release Date</string>
    <string name="vote_release_date">release date</string>
    <string name="action_popular">Popular</string>
    <string name="action_top_rated">Top rated</string>
    <string name="action_favorites">Favorites</string>
    <string name="content_authority">com.leme.movieguideapp</string>
    <string name="no_favorited_movies">You have not selected any movie as a favorite... :(</string>
    <string name="movie_reviews">Reviews</string>
    <string name="author">Author</string>
    <string name="content_review">Content</string>
    <string name="tv_no_internet">No internet connection</string>
    <string name="no_review">No review yet...</string>
    <string name="no_video">No trailer yet...</string>
    <string name="reviews">review</string>
    <string name="movie_videos">Trailers</string>
    <string name="movie_title_banner">Movie title!</string>
</resources>