<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/item_review_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/item_card_margins"
        app:cardCornerRadius="@dimen/item_card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_detail_author"
                style="@style/DetailMovieTitles"
                android:visibility="visible"
                android:text="@string/author"/>

            <TextView
                android:id="@+id/tv_movie_detail_author"
                style="@style/DetailMovieSubTitles"
                android:visibility="visible"
                android:text="@string/no_review"/>

            <TextView
                android:id="@+id/tv_detail_content_review"
                style="@style/DetailMovieTitles"
                android:visibility="visible"
                android:text="@string/content_review"/>

            <TextView
                android:id="@+id/tv_movie_detail_content_review"
                style="@style/DetailMovieSubTitles"
                android:visibility="visible"
                android:layout_marginBottom="@dimen/default_margim_16dp"
                android:text="@string/no_review"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>